.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Reallocate_Service_Request_Type__c.object
<CustomObject>
    <description>Used to configure service types that are candidates as the target of a service request reallocation (changing the assigned queue of an existing service request)</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>Incap311__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__For_Activties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Activties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Queue_Developer_Name__c</fullName>
        <label>Queue Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Queue_ID__c</fullName>
        <description>ID of the Queue that the associated service type can be reallocated to.</description>
        <label>Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Reallocate Service Request Types</relationshipLabel>
        <relationshipName>Reallocate_Service_Request_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Reallocate Service Request Type</label>
    <nameField>
        <displayFormat>RSRT-{0000}</displayFormat>
        <label>Reallocate Service Request Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reallocate Service Request Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>